[gd_scene load_steps=37 format=3 uid="uid://chsbggd0fnpvh"]

[ext_resource type="Script" path="res://Entities/Bosses/Ice_Golem/ice_golem.gd" id="1_7wjgo"]
[ext_resource type="Script" path="res://Components/Hurtbox/hurtbox.gd" id="2_0c5pm"]
[ext_resource type="Texture2D" uid="uid://mwg36xqee7og" path="res://Assets/Ice_Golem/Standing.png" id="2_2w45g"]
[ext_resource type="Texture2D" uid="uid://dler566kvhwbo" path="res://Assets/Ice_Golem/Stomp 1.png" id="3_14p6p"]
[ext_resource type="Script" path="res://Components/StatComponents/HealthComponent/health_component.gd" id="3_hq3rk"]
[ext_resource type="Script" path="res://Components/HealthBarComponent/health_bar_component.gd" id="4_jxb4j"]
[ext_resource type="Texture2D" uid="uid://ch2f8ofdepuam" path="res://Assets/Ice_Golem/Stomp 2.png" id="4_tgsnt"]
[ext_resource type="Script" path="res://Components/HealthBarComponent/health_bar_progress.gd" id="5_e4mn1"]
[ext_resource type="Texture2D" uid="uid://vgxh0dn2i2tc" path="res://Assets/Ice_Golem/Snowball Throw.png" id="5_nu5x0"]
[ext_resource type="Script" path="res://Entities/Bosses/Ice_Golem/ice_golem_state_machine.gd" id="7_3f6ek"]
[ext_resource type="Script" path="res://Entities/Bosses/Ice_Golem/idle.gd" id="8_ohg0a"]
[ext_resource type="Script" path="res://Entities/Bosses/Ice_Golem/throw.gd" id="9_t3brh"]
[ext_resource type="PackedScene" uid="uid://ccvr4jms5lxu1" path="res://Entities/Bosses/Ice_Golem/snowball.tscn" id="10_a4kgv"]
[ext_resource type="Script" path="res://Entities/Bosses/Ice_Golem/smash.gd" id="10_alaek"]
[ext_resource type="Script" path="res://Entities/Bosses/Ice_Golem/build.gd" id="11_cylvl"]
[ext_resource type="PackedScene" uid="uid://bjijnk60e54dw" path="res://Entities/Bosses/Ice_Golem/stomp.tscn" id="12_1ufis"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sijh8"]
atlas = ExtResource("2_2w45g")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxmdj"]
atlas = ExtResource("5_nu5x0")
region = Rect2(0, 0, 600, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_yjt2p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sijh8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2w45g")
}, {
"duration": 1.0,
"texture": ExtResource("3_14p6p")
}, {
"duration": 1.0,
"texture": ExtResource("4_tgsnt")
}],
"loop": true,
"name": &"stomp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxmdj")
}],
"loop": true,
"name": &"throw",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tgcf"]
size = Vector2(104, 239.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtavg"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7smhd"]
bg_color = Color(0.212167, 0.715526, 0.639373, 1)

[sub_resource type="Animation" id="Animation_obnlh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"all_frames"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_p3hji"]
resource_name = "move_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rcku7"]
resource_name = "move_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nomj1"]
resource_name = "move_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}

[sub_resource type="Animation" id="Animation_rdh0n"]
resource_name = "move_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}

[sub_resource type="Animation" id="Animation_llqlp"]
resource_name = "projectile_down"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_a7ckm"]
resource_name = "draugr_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7fcyk"]
resource_name = "projectile_up"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 8, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4gq0n"]
resource_name = "projectile_left"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}

[sub_resource type="Animation" id="Animation_0jrah"]
resource_name = "projectile_right"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}

[sub_resource type="Animation" id="Animation_w3u5v"]
resource_name = "draugr_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 9, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_i3x4g"]
resource_name = "draugr_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 13, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}

[sub_resource type="Animation" id="Animation_a8rog"]
resource_name = "draugr_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 17, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0sgc"]
_data = {
"RESET": SubResource("Animation_obnlh"),
"draugr_down": SubResource("Animation_a7ckm"),
"draugr_left": SubResource("Animation_i3x4g"),
"draugr_right": SubResource("Animation_a8rog"),
"draugr_up": SubResource("Animation_w3u5v"),
"move_down": SubResource("Animation_p3hji"),
"move_left": SubResource("Animation_rdh0n"),
"move_right": SubResource("Animation_nomj1"),
"move_up": SubResource("Animation_rcku7"),
"projectile_down": SubResource("Animation_llqlp"),
"projectile_left": SubResource("Animation_4gq0n"),
"projectile_right": SubResource("Animation_0jrah"),
"projectile_up": SubResource("Animation_7fcyk")
}

[node name="IceGolem" type="CharacterBody2D"]
script = ExtResource("1_7wjgo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_yjt2p")
animation = &"all_frames"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5tgcf")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_0c5pm")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_5tgcf")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_hq3rk")
max_health = 400.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="HealthBarComponent" type="ProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("health_component", "health_bar_progress")]
anchors_preset = -1
anchor_right = 0.206
anchor_bottom = 0.042
offset_left = 473.0
offset_top = 35.0
offset_right = 472.688
offset_bottom = 34.784
theme_override_styles/background = SubResource("StyleBoxFlat_mtavg")
theme_override_styles/fill = SubResource("StyleBoxFlat_7smhd")
max_value = 400.0
rounded = true
show_percentage = false
script = ExtResource("4_jxb4j")
health_component = NodePath("../../HealthComponent")
health_bar_progress = NodePath("HealthBarProgress")
metadata/_edit_use_anchors_ = true

[node name="HealthBarProgress" type="ProgressBar" parent="CanvasLayer/HealthBarComponent" node_paths=PackedStringArray("health_component")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 39.0
offset_right = -136.065
offset_bottom = 39.0
fill_mode = 1
script = ExtResource("5_e4mn1")
health_component = NodePath("../../../HealthComponent")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 479.0
offset_top = 5.0
offset_right = 582.0
offset_bottom = 28.0
text = "Ymir"
metadata/_edit_use_anchors_ = true

[node name="IceGolemStateMachine" type="Node" parent="."]
script = ExtResource("7_3f6ek")

[node name="Idle" type="Node" parent="IceGolemStateMachine"]
script = ExtResource("8_ohg0a")

[node name="Throw" type="Node" parent="IceGolemStateMachine"]
script = ExtResource("9_t3brh")
s_snowball = ExtResource("10_a4kgv")

[node name="Smash" type="Node" parent="IceGolemStateMachine"]
script = ExtResource("10_alaek")
s_warning = ExtResource("12_1ufis")

[node name="Build" type="Node" parent="IceGolemStateMachine"]
script = ExtResource("11_cylvl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c0sgc")
}

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
